Try to make the packages pipeline work

--- a/.azure-pipelines/packages.yml
+++ b/.azure-pipelines/packages.yml
@@ -4,7 +4,7 @@ pr: none
 variables:
   buildConfiguration: release
   dotnetCoreSdkVersion: 5.0.103
-  publishOutput: $(Build.SourcesDirectory)/src/bin/managed-publish
+  publishOutput: $(Build.SourcesDirectory)/tracer/bin/managed-publish
 
 stages:
 - stage: build
@@ -17,8 +17,8 @@ stages:
       vmImage: windows-2019
     variables:
       tracerHomeName: windows-tracer-home
-      tracerHome: $(System.DefaultWorkingDirectory)/src/bin/$(tracerHomeName)
-      msiHome: $(System.DefaultWorkingDirectory)/src/bin/msi
+      tracerHome: $(System.DefaultWorkingDirectory)/tracer/bin/$(tracerHomeName)
+      msiHome: $(System.DefaultWorkingDirectory)/tracer/bin/msi
       nuget_packages: $(Pipeline.Workspace)/.nuget/packages
 
     steps:
@@ -36,7 +36,7 @@ stages:
       displayName: dotnet restore
       inputs:
         command: restore
-        projects: src/**/*.csproj
+        projects: tracer/src/**/*.csproj
 
     # native projects must be restored with nuget.exe
     - task: NuGetCommand@2
@@ -64,7 +64,7 @@ stages:
       displayName: dotnet pack
       inputs:
         command: pack
-        packagesToPack: src/Datadog.Trace/Datadog.Trace.csproj;src/Datadog.Trace.OpenTracing/Datadog.Trace.OpenTracing.csproj
+        packagesToPack: tracer/src/Datadog.Trace/Datadog.Trace.csproj;tracer/src/Datadog.Trace.OpenTracing/Datadog.Trace.OpenTracing.csproj
         packDirectory: $(System.DefaultWorkingDirectory)/nuget-output
         configuration: $(buildConfiguration)
 
@@ -77,7 +77,7 @@ stages:
     pool:
       vmImage: ubuntu-18.04
     variables:
-      tracerHome: $(System.DefaultWorkingDirectory)/src/bin/managed-publish
+      tracerHome: $(System.DefaultWorkingDirectory)/tracer/bin/managed-publish
 
     steps:
     - task: UseDotNet@2
@@ -89,7 +89,7 @@ stages:
       displayName: dotnet build Datadog.Trace.ClrProfiler.Managed.Loader
       inputs:
         command: build
-        projects: src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
+        projects: tracer/src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
         arguments: --configuration $(buildConfiguration)
 
     - task: DotNetCoreCLI@2
@@ -99,7 +99,7 @@ stages:
         publishWebProjects: false
         modifyOutputPath: false
         zipAfterPublish: false
-        projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
+        projects: tracer/src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
         arguments: --configuration $(buildConfiguration) --framework netstandard2.0 --output $(tracerHome)/netstandard2.0
 
     - task: DotNetCoreCLI@2
@@ -109,7 +109,7 @@ stages:
         publishWebProjects: false
         modifyOutputPath: false
         zipAfterPublish: false
-        projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
+        projects: tracer/src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
         arguments: --configuration $(buildConfiguration) --framework netcoreapp3.1 --output $(tracerHome)/netcoreapp3.1
 
     - task: DockerCompose@0
@@ -124,14 +124,14 @@ stages:
         containerregistrytype: Container Registry
         dockerComposeCommand: run -e buildConfiguration=$(buildConfiguration) -e ARCHITECTURE=x64 package
 
-    - publish: deploy/linux
+    - publish: tracer/deploy/linux
       artifact: linux-packages
 
   - job: linux_alpine_packages
     pool:
       vmImage: ubuntu-18.04
     variables:
-      tracerHome: $(System.DefaultWorkingDirectory)/src/bin/managed-publish
+      tracerHome: $(System.DefaultWorkingDirectory)/tracer/bin/managed-publish
 
     steps:
     - task: UseDotNet@2
@@ -143,7 +143,7 @@ stages:
       displayName: dotnet build Datadog.Trace.ClrProfiler.Managed.Loader
       inputs:
         command: build
-        projects: src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
+        projects: tracer/src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
         arguments: --configuration $(buildConfiguration)
 
     - task: DotNetCoreCLI@2
@@ -153,7 +153,7 @@ stages:
         publishWebProjects: false
         modifyOutputPath: false
         zipAfterPublish: false
-        projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
+        projects: tracer/src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
         arguments: --configuration $(buildConfiguration) --framework netstandard2.0 --output $(tracerHome)/netstandard2.0
 
     - task: DotNetCoreCLI@2
@@ -163,7 +163,7 @@ stages:
         publishWebProjects: false
         modifyOutputPath: false
         zipAfterPublish: false
-        projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
+        projects: tracer/src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
         arguments: --configuration $(buildConfiguration) --framework netcoreapp3.1 --output $(tracerHome)/netcoreapp3.1
 
     - task: DockerCompose@0
@@ -178,7 +178,7 @@ stages:
         containerregistrytype: Container Registry
         dockerComposeCommand: run -e buildConfiguration=$(buildConfiguration) package.alpine
 
-    - publish: deploy/linux
+    - publish: tracer/deploy/linux
       artifact: linux-alpine-packages
 
   - job: linux_arm64_packages
@@ -186,7 +186,7 @@ stages:
     workspace:
         clean: all
     variables:
-      tracerHome: $(System.DefaultWorkingDirectory)/src/bin/managed-publish
+      tracerHome: $(System.DefaultWorkingDirectory)/tracer/bin/managed-publish
 
     steps:
 
@@ -194,7 +194,7 @@ stages:
       displayName: dotnet build Datadog.Trace.ClrProfiler.Managed.Loader
       inputs:
         command: build
-        projects: src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
+        projects: tracer/src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
         arguments: --configuration $(buildConfiguration) /nowarn:netsdk1138
 
     - task: DotNetCoreCLI@2
@@ -204,7 +204,7 @@ stages:
         publishWebProjects: false
         modifyOutputPath: false
         zipAfterPublish: false
-        projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
+        projects: tracer/src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
         arguments: --configuration $(buildConfiguration) --framework netstandard2.0 --output $(tracerHome)/netstandard2.0
 
     - task: DotNetCoreCLI@2
@@ -214,7 +214,7 @@ stages:
         publishWebProjects: false
         modifyOutputPath: false
         zipAfterPublish: false
-        projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
+        projects: tracer/src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
         arguments: --configuration $(buildConfiguration) --framework netcoreapp3.1 --output $(tracerHome)/netcoreapp3.1
 
     - task: DockerCompose@0
@@ -229,7 +229,7 @@ stages:
         containerregistrytype: Container Registry
         dockerComposeCommand: run -e buildConfiguration=$(buildConfiguration) -e ARCHITECTURE=arm64 package
 
-    - publish: deploy/linux
+    - publish: tracer/deploy/linux
       artifact: linux-arm64-packages
 
   #### Upload artifacts to S3
