Update the ultimate-pipeline to use Nuke
Splits things into extra stages to increase throughput when we're waiting on a particular machine type linux/windows/mac
Many more optimizations possible, but may not be worth the effort yet
Added new docker-compose targets for now. Can clean these up later
There are some steps which haven't been fully converted yet, but this is a good start IMO

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -386,6 +386,9 @@ services:
   IntegrationTests.IIS.LoaderOptimizationRegKey:
     build:
       context: ./
+      args:
+        - ENABLE_32_BIT
+        - DOTNET_TRACER_MSI
       dockerfile: ./build/docker/iis/LoaderOptimizationRegKey.dockerfile
     image: datadog-iis-loaderoptimizationregkey
     ports:
@@ -583,6 +586,85 @@ services:
     - rabbitmq
     - kafka-broker
     - kafka-zookeeper
+
+  IntegrationTests2:
+    build:
+      context: ./build/_build/
+      dockerfile: docker/${baseImage:-debian}.dockerfile
+      args:
+        - DOTNETSDK_VERSION=${dotnetCoreSdk5Version:-5.0.103}
+    image: dd-trace-dotnet/${baseImage:-debian}-tester
+    command: dotnet /build/bin/Debug/_build.dll RunLinuxIntegrationTests --framework ${framework:-netcoreapp3.1}
+    volumes:
+      - ./:/project
+    environment:
+      - NugetPackageDirectory=/project/${relativeNugetPackageDirectory:-packages}
+      - tracerHome=/project/${relativeTracerHome:-src/bin/windows-tracer-home}
+      - artifacts=/project/${relativeArtifacts:-src/bin/artifacts}
+      - framework=${framework:-netcoreapp3.1}
+      - baseImage=${baseImage:-default}
+      - MONGO_HOST=mongo
+      - SERVICESTACK_REDIS_HOST=servicestackredis:6379
+      - STACKEXCHANGE_REDIS_HOST=stackexchangeredis:6379
+      - ELASTICSEARCH6_HOST=elasticsearch6:9200
+      - ELASTICSEARCH5_HOST=elasticsearch5:9200
+      - SQLSERVER_CONNECTION_STRING=Server=sqlserver;User=sa;Password=Strong!Passw0rd
+      - POSTGRES_HOST=postgres
+      - MYSQL_HOST=mysql
+      - MYSQL_PORT=3306
+      - MYSQL57_HOST=mysql57
+      - MYSQL57_PORT=3306
+      - RABBITMQ_HOST=rabbitmq
+      - KAFKA_BROKER_HOST=kafka-broker:29092
+    depends_on:
+      - servicestackredis
+      - stackexchangeredis
+      - elasticsearch6
+      - elasticsearch5
+      - sqlserver
+      - mongo
+      - postgres
+      - mysql
+      - mysql57
+      - rabbitmq
+      - kafka-broker
+      - kafka-zookeeper
+
+  IntegrationTests2.ARM64:
+    build:
+      context: ./build/_build/
+      dockerfile: docker/${baseImage:-debian}.dockerfile
+      args:
+        - DOTNETSDK_VERSION=${dotnetCoreSdk5Version:-5.0.103}
+    image: dd-trace-dotnet/${baseImage:-debian}-tester
+    command: dotnet /build/bin/Debug/_build.dll RunLinuxIntegrationTests --framework ${framework:-netcoreapp3.1}
+    volumes:
+      - ./:/project
+    environment:
+      - NugetPackageDirectory=/project/${relativeNugetPackageDirectory:-packages}
+      - tracerHome=/project/${relativeTracerHome:-src/bin/windows-tracer-home}
+      - artifacts=/project/${relativeArtifacts:-src/bin/artifacts}
+      - framework=${framework:-netcoreapp3.1}
+      - baseImage=${baseImage:-debian}
+      - MONGO_HOST=mongo
+      - SERVICESTACK_REDIS_HOST=servicestackredis:6379
+      - STACKEXCHANGE_REDIS_HOST=stackexchangeredis:6379
+      - ELASTICSEARCH6_HOST=elasticsearch7_arm64:9200
+      - ELASTICSEARCH5_HOST=elasticsearch7_arm64:9200
+      - SQLSERVER_CONNECTION_STRING=Server=sqledge;User=sa;Password=Strong!Passw0rd
+      - POSTGRES_HOST=postgres
+      - MYSQL_HOST=mysql
+      - MYSQL_PORT=3306
+      - RABBITMQ_HOST=rabbitmq
+    depends_on:
+      - servicestackredis
+      - stackexchangeredis
+      - elasticsearch7_arm64
+      - sqledge
+      - mongo
+      - postgres
+      - mysql
+      - rabbitmq
 
   IntegrationTests.ARM64.Core50:
     build:
